--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "freegpt35",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "dev": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "axios": "^1.6.8",
     "express": "^4.19.2"
