--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "freegpt35",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
   "scripts": {
-    "dev": "node app.js",
+    "dev": "node api/index.js",
+    "build": "node api/index.js",
+    "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2"
   }
 }
