--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "(.*)",
-      "dest": "app.js"
-    }
-  ]
+  "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
+	"rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
